<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:minHeight="547dp"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/date_range_picker_background"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageCheckIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_checkin_32px"
            app:layout_constraintBottom_toTopOf="@id/textDateCheckIn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textCheckIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textCheckIn"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/imageCheckIn"
            app:layout_constraintLeft_toRightOf="@id/imageCheckIn"
            app:layout_constraintTop_toTopOf="@id/imageCheckIn" />

        <View
            android:id="@+id/Line"
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDateCheckIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDateExample"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/imageCheckIn"
            app:layout_constraintTop_toBottomOf="@id/imageCheckIn" />

        <ImageView
            android:id="@+id/imageCheckOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_checkout_32px"
            app:layout_constraintBottom_toTopOf="@id/textDateCheckOut"
            app:layout_constraintRight_toLeftOf="@id/textCheckOut"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textCheckOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textCheckOut"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/imageCheckOut"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageCheckOut" />

        <TextView
            android:id="@+id/textDateCheckOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDateExample"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/imageCheckOut"
            app:layout_constraintTop_toBottomOf="@id/imageCheckOut" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.archit.calendardaterangepicker.customviews.DateRangeCalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        custom:disable_date_color="#ABABAB"
        custom:enable_time_selection="false"
        custom:layout_constraintLeft_toLeftOf="parent"
        custom:layout_constraintRight_toRightOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:range_color="#6e93f1"
        custom:selected_date_circle_color="@color/apply"
        custom:title_color="#000000" />

    <androidx.cardview.widget.CardView
        android:layout_width="285dp"
        android:layout_height="44dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:elevation="15dp"
        android:focusable="true"
        app:cardCornerRadius="22dp"
        tools:targetApi="lollipop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textApply"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:background="@drawable/apply_button_background"
                android:clickable="true"
                android:elevation="10dp"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/textButtonApply"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:text="@string/textDurationExample"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/textApply"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNumberDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_min"
                android:text="@string/_0"
                android:textAlignment="textStart"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/textDuration"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>