<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_height_max"
    android:layout_marginBottom="30dp">

    <LinearLayout
        android:id="@+id/contentLinearLayout"
        android:layout_width="@dimen/layout_width_small"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_normal"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/contentImageRoom"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="@dimen/icon_small"
            android:layout_height="@dimen/icon_small"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@drawable/ic_feather_star"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvAccountRating"
            android:layout_width="@dimen/layout_width_small"
            android:layout_height="@dimen/icon_small"
            android:gravity="center"
            android:text="@string/_4_3"
            android:textColor="@color/color_text_hint"
            android:textSize="@dimen/text_small" />

        <ImageButton
            android:layout_width="@dimen/icon_small"
            android:layout_height="@dimen/icon_small"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top_min"
            android:background="@null"
            android:src="@drawable/ic_feather_message_circle"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvAccountComment"
            android:layout_width="@dimen/layout_width_small"
            android:layout_height="@dimen/icon_small"
            android:gravity="center"
            android:text="@string/_4_3"
            android:textColor="@color/color_text_hint"
            android:textSize="@dimen/text_small" />

        <ImageButton
            android:layout_width="@dimen/icon_small"
            android:layout_height="@dimen/icon_small"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top_xnormal"
            android:background="@null"
            android:id="@+id/imbLike"
            android:src="@drawable/ic_favorite_hint"
            tools:ignore="ContentDescription" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/contentImageRoom"
        android:layout_width="@dimen/size_normal_width"
        android:layout_height="@dimen/layout_height_max"
        android:layout_marginEnd="@dimen/margin_xmin"
        android:layout_marginRight="@dimen/margin_xmin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:id="@+id/imgRoom"
            android:layout_width="@dimen/size_normal_width"
            android:layout_height="@dimen/layout_height_max"
            android:scaleType="centerCrop"
            android:src="@drawable/room"
            tools:ignore="ContentDescription,MissingPrefix" />

        <TextView
            android:id="@+id/tvNameRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_left_normal"
            android:layout_marginLeft="@dimen/margin_left_normal"
            android:paddingBottom="@dimen/margin_xmin"
            android:text="@string/sunny_soho_flat"
            android:textColor="@color/color_text_white" />

        <TextView
            android:id="@+id/tvPerNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/margin_top_min"
            android:layout_marginRight="@dimen/margin_top_min"
            android:layout_marginBottom="@dimen/margin_min"
            android:text="@string/per_night"
            android:textColor="@color/color_view"
            android:textSize="@dimen/text_small"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tvPriceRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvPerNight"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/margin_top_min"
            android:layout_marginRight="@dimen/margin_top_min"
            android:layout_marginBottom="25dp"
            android:text="@string/_130"
            android:textColor="@color/color_text_white"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tvDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvPerNight"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:layout_toLeftOf="@+id/tvPriceRoom"
            android:text="@string/dollar"
            android:textColor="@color/color_text_white"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>